--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_API_URL_CUSTOMER=https://customer-rest-service-frontend-personaltrainer.2.rahtiapp.fi/api/
+VITE_API_URL_CUSTOMER=https://customer-rest-service-frontend-personaltrainer.2.rahtiapp.fi
