--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "@mui/x-data-grid": "^8.20.0",
     "@mui/x-date-pickers": "^8.19.0",
     "dayjs": "^1.11.19",
+    "lodash": "^4.17.21",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-is": "^19.2.1",
+    "recharts": "^3.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
